Removed all custom visuals

--- a/index.html
+++ b/index.html
@@ -11,71 +11,63 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Arial','San Francisco Text';
+      font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background:
-        radial-gradient(circle, transparent 20%, rgba(255,255,255,.1) 21%, rgba(255,255,255,.1) 30%, transparent 31%, transparent 50%) var(--circle-size, 100px) var(--circle-size, 100px),
-        radial-gradient(circle, transparent 20%, rgba(255,255,255,.1) 21%, rgba(255,255,255,.1) 30%, transparent 31%, transparent 50%) 50px 50px,
-        linear-gradient(var(--grid-color, #4CAF50) var(--grid-line-size, 2px), transparent var(--grid-line-size, 2px)) 0 -1px,
-        linear-gradient(90deg, var(--grid-color, #4CAF50) var(--grid-line-size, 2px), transparent var(--grid-line-size, 2px)) -1px 0;
-      background-size: var(--circle-size, 100px) var(--circle-size, 100px), var(--circle-size, 100px) var(--circle-size, 100px), 100px 100px, 100px 100px;
       background-color: #333333;
-      transition: background 0.0hs; /* Smooth transition for background change */
+      color: #ffffff;
     }
     .search-container {
       display: flex;
       gap: 8px;
-      width:500px;
-      background: rgba(0, 0, 0, 0.5);
+      width: 500px;
       padding: 16px;
       border-radius: 8px;
-      position: relative; /* Added for dropdown positioning */
+      position: relative;
     }
     .search-input {
       padding: 8px;
-      width:500px;
+      width: 500px;
       font-size: 16px;
-      border: 2px solid #fff;
+      border: 1px solid #ccc;
       border-radius: 4px;
-      background: rgba(255, 255, 255, 0.8);
-      color: #000;
     }
     .search-button {
       padding: 8px 16px;
       font-size: 16px;
       cursor: pointer;
-      border: 2px solid #fff;
+      border: 1px solid #ccc;
       border-radius: 4px;
-      background: rgba(255, 255, 255, 0.8);
-      color: #000;
+      background-color: #f0f0f0;
     }
     .search-button:hover {
-      background: rgba(255, 255, 255, 1);
+      background-color: #e0e0e0;
     }
     .options-button {
       padding: 8px;
       cursor: pointer;
-      border: 2px solid #fff;
+      border: 1px solid #ccc;
       border-radius: 4px;
-      background: rgba(255, 255, 255, 0.8);
-      color: #000;
+      background-color: #f0f0f0;
     }
     .options-menu {
       display: none;
       position: absolute;
       top: 100%;
       right: 0;
-      background: rgba(0, 0, 0, 0.7);
+      background-color: #444444;
+      color: #ffffff;
+      border: 1px solid #555;
       border-radius: 4px;
       padding: 8px;
       z-index: 10;
     }
     .options-menu label {
-      color: #fff;
+      display: block;
+      margin-bottom: 5px;
     }
     .options-menu input {
       margin-left: 8px;
@@ -84,39 +76,30 @@
       margin-top: 8px;
       padding: 8px;
       cursor: pointer;
-      border: 2px solid #fff;
+      border: 1px solid #ccc;
       border-radius: 4px;
-      background: rgba(255, 255, 255, 0.8);
-      color: #000;
+      background-color: #f0f0f0;
     }
 
     @media only screen and (max-width: 600px) {
-  body {
-    flex-direction: column !important;
-    padding: 10px !important;
-  }
-  .search-container {
-    flex-direction: column !important;
-    padding: 10px !important;
-    max-width: 85% !important;
-  }
-  .search-input {
-    width: 100% !important;
-    padding: 10px !important;
-    font-size: 14px !important;
-    box-sizing: border-box !important;
-  }
-  .search-button {
-    width: 100% !important;
-    padding: 10px !important;
-    font-size: 14px !important;
-    box-sizing: border-box !important;
-  }
-}
-}
-
-
-
+      .search-container {
+        flex-direction: column;
+        padding: 10px;
+        max-width: 85%;
+      }
+      .search-input {
+        width: 100%;
+        padding: 10px;
+        font-size: 14px;
+        box-sizing: border-box;
+      }
+      .search-button {
+        width: 100%;
+        padding: 10px;
+        font-size: 14px;
+        box-sizing: border-box;
+      }
+    }
   </style>
 </head>
 <body>
@@ -130,72 +113,45 @@
   <button id="searchBtn" class="search-button">Search</button>
   <button id="optionsBtn" class="options-button">Options</button>
   <div id="optionsMenu" class="options-menu">
-      <label>
+    <label>
       <input type="checkbox" id="includeBang" />
       Include "!" in search
     </label>
     <div>
-  <label for="fallbackSearch">Fallback Search Engine:</label>
-  <select id="fallbackSearch">
-    <option value="g">Google</option>
-    <option value="ddg">DuckDuckGo</option>
-    <option value="ai">DuckAI</option>
-    <option value="b">Bing</option>
-    <option value="brave">Brave</option>
-    <option value="y">Yahoo!</option>
-    <option value="ai">ChatGPT</option>
-    <option value="ai">Claude</option>
-
-
-
-    <!-- Add more options as needed -->
-  </select>
-</div>
-
-    <div>
-      <label for="circleToggle">Show Circles:</label>
-      <input type="checkbox" id="circleToggle" />
-    </div>
-    <div>
-      <label for="gridToggle">Show Grid Lines:</label>
-      <input type="checkbox" id="gridToggle" />
-    </div>
-    <div>
-      <label for="backgroundColor">Background Color:</label>
-      <input type="color" id="backgroundColor" />
-    </div>
-    <div>
-      <label for="gridColor">Grid Line Color:</label>
-      <input type="color" id="gridColor" />
+      <label for="fallbackSearch">Fallback Search Engine:</label>
+      <select id="fallbackSearch">
+        <option value="g">Google</option>
+        <option value="ddg">DuckDuckGo</option>
+        <option value="ai">DuckAI</option>
+        <option value="b">Bing</option>
+        <option value="brave">Brave</option>
+        <option value="y">Yahoo!</option>
+        <option value="ai">ChatGPT</option>
+        <option value="ai">Claude</option>
+      </select>
     </div>
     <button id="resetButton" class="reset-button">Reset to Default</button>
   </div>
 </div>
 
 <script type="module">
- // allow for ui fallback search engine select
-const fallbackSearch = document.getElementById('fallbackSearch');
-let ourlordandsavior = localStorage.getItem('fallbackSearchEngine') || 'ddg'; // Default to 'ddg'
+  // allow for ui fallback search engine select
+  const fallbackSearch = document.getElementById('fallbackSearch');
+  let ourlordandsavior = localStorage.getItem('fallbackSearchEngine') || 'ddg'; // Default to 'ddg'
 
-// Set the dropdown to the saved value
-fallbackSearch.value = ourlordandsavior;
+  // Set the dropdown to the saved value
+  fallbackSearch.value = ourlordandsavior;
 
-// Update ourlordandsavior and save to localStorage when the dropdown changes
-fallbackSearch.onchange = function() {
-  ourlordandsavior = this.value;
-  localStorage.setItem('fallbackSearchEngine', ourlordandsavior);
-};
-
-
+  // Update ourlordandsavior and save to localStorage when the dropdown changes
+  fallbackSearch.onchange = function() {
+    ourlordandsavior = this.value;
+    localStorage.setItem('fallbackSearchEngine', ourlordandsavior);
+  };
 
   // Automatically focus the search input when the page loads
   window.onload = function() {
     const searchInput = document.getElementById('searchInput');
     const includeBang = document.getElementById('includeBang');
-    const circleToggle = document.getElementById('circleToggle');
-    const gridToggle = document.getElementById('gridToggle');
-    const backgroundColor = document.getElementById('backgroundColor');
-    const gridColor = document.getElementById('gridColor');
 
     // Check if the option to include "!" is saved in localStorage
     if (localStorage.getItem('includeBang') === 'true') {
@@ -203,36 +159,23 @@ fallbackSearch.onchange = function() {
       searchInput.value = '!';
     }
 
-    // Load saved options from localStorage
-    circleToggle.checked = localStorage.getItem('showCircles') === 'true';
-    gridToggle.checked = localStorage.getItem('showGridLines') === 'true';
-    const savedBackgroundColor = localStorage.getItem('backgroundColor') || '#333333';
-    const savedGridColor = localStorage.getItem('gridColor') || '#4CAF50';
-    backgroundColor.value = savedBackgroundColor;
-    gridColor.value = savedGridColor;
-
-    // Set the initial background
-    updateBackground();
-
     // Focus the search input
     searchInput.focus();
   };
 
   // Toggle options menu visibility
-const optionsBtn = document.getElementById('optionsBtn');
-const optionsMenu = document.getElementById('optionsMenu');
+  const optionsBtn = document.getElementById('optionsBtn');
+  const optionsMenu = document.getElementById('optionsMenu');
 
-optionsBtn.onclick = function() {
-  optionsMenu.style.display = optionsMenu.style.display === 'block' ? 'none' : 'block';
-};
+  optionsBtn.onclick = function() {
+    optionsMenu.style.display = optionsMenu.style.display === 'block' ? 'none' : 'block';
+  };
 
-document.addEventListener('click', (event) => {
-  if (!optionsMenu.contains(event.target) && event.target !== optionsBtn) {
-    optionsMenu.style.display = 'none';
-  }
-});
-
-
+  document.addEventListener('click', (event) => {
+    if (!optionsMenu.contains(event.target) && event.target !== optionsBtn) {
+      optionsMenu.style.display = 'none';
+    }
+  });
 
   // Save the state of the checkbox in localStorage
   document.getElementById('includeBang').onchange = function() {
@@ -245,55 +188,19 @@ document.addEventListener('click', (event) => {
     }
   };
 
-  // Update background based on toggles and colors
-  function updateBackground() {
-    const showCircles = document.getElementById('circleToggle').checked;
-    const showGridLines = document.getElementById('gridToggle').checked;
-    const bgColor = document.getElementById('backgroundColor').value;
-    const gridCol = document.getElementById('gridColor').value;
-
-    // Set CSS variables for background
-    document.body.style.setProperty('--grid-color', showGridLines ? gridCol : 'transparent');
-    document.body.style.setProperty('--circle-size', showCircles ? '100px' : '0px');
-    document.body.style.backgroundColor = bgColor;
-
-    // Save options to localStorage
-    localStorage.setItem('showCircles', showCircles);
-    localStorage.setItem('showGridLines', showGridLines);
-    localStorage.setItem('backgroundColor', bgColor);
-    localStorage.setItem('gridColor', gridCol);
-  }
-
-  // Event listeners for toggles and color pickers
-  document.getElementById('circleToggle').onchange = updateBackground;
-  document.getElementById('gridToggle').onchange = updateBackground;
-  document.getElementById('backgroundColor').oninput = updateBackground;
-  document.getElementById('gridColor').oninput = updateBackground;
-
   // Reset to default settings
   document.getElementById('resetButton').onclick = function() {
     // Clear localStorage
     localStorage.clear();
 
-    // Reset checkboxes and color inputs to default values
+    // Reset checkbox to default value
     includeBang.checked = false;
-    circleToggle.checked = true; // Default to showing circles
-    gridToggle.checked = true; // Default to showing grid
-
-    backgroundColor.value = '#333333'; // Default background color
-    gridColor.value = '#4CAF50'; // Default grid line color
-
-    // Update the background with default settings
-    updateBackground();
 
     // Reset the search input
     const searchInput = document.getElementById('searchInput');
     searchInput.value = ''; // Clear the search input
     searchInput.focus(); // Refocus the search input
   };
-
-
-
 
   const input = document.getElementById('searchInput');
   const button = document.getElementById('searchBtn');
@@ -362,41 +269,18 @@ document.addEventListener('click', (event) => {
       });
   }
 
- // saving for later if i make this a website
-  // Function to fetch and read the customBangs.txt file
-        async function loadCustomBangs() {
-            try {
-                const response = await fetch('customBangs.txt'); // Adjust the path if necessary
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const data = await response.text();
-                const customBangs = JSON.parse(data);
-                console.log(customBangs); // Use the customBangs array as needed
-            } catch (error) {
-                console.error('Error fetching the file:', error);
-            }
-        }
-
-        // Call the function to load custom bangs
-       // loadCustomBangs();
-
-// custom bangs are checked first and will override default bangs!!!
- const customBangs = [
-            {
-                "c": "Shopping",
-                "d": "https://shopping.inter.co",
-                "r": 0,
-                "s": "Inter Shopping",
-                "sc": "IS",
-                "t": "is",
-                "u": "https://shopping.inter.co/busca?q={{{s}}}&tab=affiliate"
-            },
-        ];
-
-
-
-
+  // custom bangs are checked first and will override default bangs!!!
+  const customBangs = [
+    {
+      "c": "Shopping",
+      "d": "https://shopping.inter.co",
+      "r": 0,
+      "s": "Inter Shopping",
+      "sc": "IS",
+      "t": "is",
+      "u": "https://shopping.inter.co/busca?q={{{s}}}&tab=affiliate"
+    },
+  ];
 
    // Same file found at https://duckduckgo.com/bang.js just cleaned up.
   //added duck ai back as default ai bang
