--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       { t: "abr", u: "https://www.amazon.com.br/s?k={{{s}}}", d: "https://www.amazon.com.br" },
       { t: "gdrive", u: "https://drive.google.com/drive/search?q={{{s}}}", d: "https://drive.google.com" },
       { t: "gbr", u: "https://www.google.com.br/search?q={{{s}}}", d: "https://www.google.com.br" },
-      { t: "lucky", u: "https://duckduckgo.com/?q=!%20{{{s}}}", d: "https://duckduckgo.com" },
+      { t: "lucky", u: "https://duckduckgo.com/?q=%21+{{{s}}}", d: "https://duckduckgo.com" },
       // Bangs padrão
       { t: "g", u: "https://www.google.com/search?q={{{s}}}", d: "https://www.google.com" },
       { t: "ddg", u: "https://duckduckgo.com/?q={{{s}}}", d: "https://duckduckgo.com" },
