--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
       { t: "abr", u: "https://www.amazon.com.br/s?k={{{s}}}", d: "https://www.amazon.com.br" },
       { t: "gdrive", u: "https://drive.google.com/drive/search?q={{{s}}}", d: "https://drive.google.com" },
       { t: "gbr", u: "https://www.google.com.br/search?q={{{s}}}", d: "https://www.google.com.br" },
-      { t: "lucky", u: "https://duckduckgo.com/?q=%21+{{{s}}}", d: "https://duckduckgo.com" },
+      { t: "lucky", u: "https://duckduckgo.com/?q=%5C{{{s}}}", d: "https://duckduckgo.com" },
+      { t: "ai", u: "https://www.duckduckgo.com/?q={{{s}}}&ia=chat&bang=true", d: "https://www.duckduckgo.com" },
+      { t: "chatgpt", u: "https://chat.openai.com/?q={{{s}}}", d: "https://chat.openai.com" },
+      // não funciona { t: "claude", u: "https://claude.ai/search?q={{{s}}}", d: "https://claude.ai" },
+
       // Bangs padrão
       { t: "g", u: "https://www.google.com/search?q={{{s}}}", d: "https://www.google.com" },
       { t: "ddg", u: "https://duckduckgo.com/?q={{{s}}}", d: "https://duckduckgo.com" },
