--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
       { t: "ddg", u: "https://duckduckgo.com/?q={{{s}}}", d: "https://duckduckgo.com" },
       { t: "gbr", u: "https://www.google.com.br/search?q={{{s}}}", d: "https://www.google.com.br" },
       { t: "gdrive", u: "https://drive.google.com/drive/search?q={{{s}}}", d: "https://drive.google.com" },
-      { t: "lucky", u: "https://www.google.com.br/search?q={{{s}}}&btnI", d: "https://www.google.com.br" },
+      { t: "jira", u: "https://icasei.atlassian.net/browse/{{{s}}}", d: "https://home.atlassian.com" },
+      { t: "lucky", u: "https://lucky.surf/{{{s}}}", d: "https://lucky.surf" },
       { t: "maps", u: "https://maps.google.com/maps?q={{{s}}}", d: "https://maps.google.com" },
       { t: "promobit", u: "https://www.promobit.com.br/busca?q={{{s}}}", d: "https://www.promobit.com.br" },
       { t: "reddit", u: "https://www.reddit.com/search?q={{{s}}}", d: "https://www.reddit.com" },
