--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
       { t: ["m","maps"], u: "https://maps.google.com/maps?q={{{s}}}", d: "maps.google.com" },
       { t: ["o","chatgpt"], u: "https://chat.openai.com/?q={{{s}}}", d: "chat.openai.com" },
       { t: ["p", "pp"], u: "https://perplexity.ai/search?q={{{s}}}", d: "perplexity.ai" },
-      { t: ["pb", "promo"], u: "https://promobit.com.br/buscar?q={{{s}}}", d: "promobit.com.br" },
+      { t: ["pb", "promobit"], u: "https://promobit.com.br/buscar?q={{{s}}}", d: "promobit.com.br" },
       { t: ["r","reddit"], u: "https://reddit.com/search?q={{{s}}}", d: "reddit.com" },
+      { t: ["s","shopee"], u: "https://shopee.com.br/search?keyword={{{s}}}", d: "shopee.com.br" },
       { t: ["y","yt", "youtube"], u: "https://youtube.com/results?search_query={{{s}}}", d: "youtube.com" },
     ];
 
