--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       { t: ["a", "amazon", "amazonbr"], u: "https://amazon.com.br/s?k={{{s}}}", d: "amazon.com.br" },
       { t: ["ai"], u: "https://duckduckgo.com/?q={{{s}}}&ia=chat&bang=true", d: "duckduckgo.com" },
       { t: ["b", "bing"], u: "https://bing.com/search?q={{{s}}}", d: "bing.com" },
-      { t: ["c", "claude"], u: "https://claude.ai/search?q={{{s}}}", d: "claude.ai" },
+      { t: ["c", "claude"], u: "https://claude.ai/new?q={{{s}}}", d: "claude.ai" },
       { t: ["d", "ddg", "duckduckgo"], u: "https://duckduckgo.com/?q={{{s}}}", d: "duckduckgo.com" },
       { t: ["g", "gbr", "google"], u: "https://google.com.br/search?q={{{s}}}", d: "google.com.br" },
       { t: ["gd","gdrive", "drive"], u: "https://drive.google.com/drive/search?q={{{s}}}", d: "drive.google.com" },
