--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       { t: ["i", "inter"], u: "https://shopping.inter.co/busca?q={{{s}}}&tab=affiliate", d: "shopping.inter.co" },
       { t: ["ig", "instagram"], u: "https://instagram.com/explore/search/tags/?q={{{s}}}", d: "instagram.com" },
       { t: ["j","jira"], u: "https://icasei.atlassian.net/browse/{{{s}}}", d: "icasei.atlassian.net" },
-      { t: ["l","lucky"], u: "https://lucky.surf/{{{s}}}", d: "lucky.surf" },
+      { t: ["l","lucky"], u: "http://duckduckgo.com/?q=\%20{{{s}}}", d: "duckduckgo.com" },
       { t: ["m","maps"], u: "https://maps.google.com/maps?q={{{s}}}", d: "maps.google.com" },
       { t: ["o","chatgpt"], u: "https://chat.openai.com/?q={{{s}}}", d: "chat.openai.com" },
       { t: ["p", "pp"], u: "https://perplexity.ai/search?q={{{s}}}", d: "perplexity.ai" },
